<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VooDoo Call Killer</string>
    <string name="app_description">
		This application allows to do VooDoo (filter temporarily) on the incoming 
		calls received from your contacts. It also allows to configure different 
		actions on response to incoming calls (e.g. Tweet a message or send an 
		email to callers.)\n\n-Log management tasks by Álvaro Gutierrez Leña
		\n-Images by Manuel I. Estepa Duque\n-Menu icons by Joseph Wain / glyphish.com
	</string>
    <string name="app_author">Author: Francisco Pérez-Sorrosal
    \nhttp://linkedin.com/in/fperezsorrosal</string>
    <string name="app_author_email">fperezsorrosal (at) gmail.com</string>
	
    <!-- General messages -->
    <string name="version">Version %s</string>
    <string name="about">About %s</string>
    <string name="unknown_contact">Unknown contact</string>
    <string name="delete_op">Delete operation</string>
    <string name="ok_tag">Yes</string>
    <string name="cancel_tag">No</string>
    <string name="on_tag">On</string>
    <string name="off_tag">Off</string>
    <string name="done_tag">Done</string>
    <string name="clear_tag">Clear</string>
    <string name="close_tag">Close</string>
    <string name="email">GMail User</string>
    <string name="password">Password</string>
    <string name="no_network">Network connection not available</string>
    <string name="remove_user">Are you sure you want to delete %s</string>
    
    <!-- Filtering service related strings -->
    <string name="service_name">VooDoo Call Scanner</string>
    <string name="service_name_description">This service is filtering undesired incoming calls!</string>
    <string name="ics_service_enabled">Voodoo</string>
    <string name="started">Started</string>
    <string name="stopped">Stopped</string>
    <string name="starting_ics_service">Starting Voodoo Call Scanner</string>
    <string name="incoming_call_received">Incoming Call Received</string>
    <string name="show_log">VooDoo-ed calls...</string>
    <string name="ics_service_started">VooDoo Call Scanner started</string>
    <string name="ics_service_not_bound">VooDoo Call Scanner not bound. Connect first!</string>    
    <string name="ics_service_stopped">VooDoo Call Scanner has been stopped</string>
    <string name="filtered_contacts">VooDoo-ing...</string>
    <string name="no_contact_selected">No contact was selected</string>
    <string name="contact_already_filtered">Contact already filtered</string>
    <string name="missing_contact_data">Some contact data (Name or Phone Number) is missing</string>
    <string name="filter_all_calls">all callers?</string>
    <string name="call_message">Call from %s received. Call ended.</string>

    <!-- Email related strings -->    
    <string name="email_enabled">E-mail caller ON</string>
    <string name="email_disabled">E-mail caller OFF</string>
    <string name="email_name">GMail User Data</string>
    <string name="email_default_msg">Text to send</string>
    <string name="email_wrong_user_data">You must enter your GMail user and password</string>
    <string name="no_email_addresses_found">No email addresses found</string>
    <string name="email_prefs_saved">Email user data saved in Preferences</string>
    <string name="email_not_sent">Your email can\'t be sent :-( Please check your Mail Preferences</string>
    
    <!-- Twitter related strings -->
    <string name="twitter_enabled">Tweet calls ON</string>
    <string name="twitter_disabled">Tweet calls OFF</string>
    <string name="twitter_callback">twitter-callback:///</string>
    <string name="twitter_configuration">Twitter Configuration</string>
    <string name="twitter_conn_allowed">Now you can connect to Twitter. Press button</string>
    <string name="twitter_at_error">Error getting Twitter Access Token</string>
    <string name="twitter_auth_failed">Twitter Authorization Failed</string>
    <string name="twitter_enter_consumer_data">Please, put your Twitter user and password</string>
    <string name="twitter_set_right_consumer_data">Please, set properly your Twitter Consumer Key and Secret on the Main Menu</string>
    <string name="twitter_wrong_consumer_data">You must enter your Key and Secret from Twitter</string>
    <string name="twitter_webview_name">Twitter account data</string>
    <string name="twitter_default_msg">Tweet (Max 120 chars)</string>
    <string name="tweet_not_sent">Your Tweet can\'t be sent :-( Please check your Twitter Preferences</string>
    <string name="twitter_prefs_saved">Twitter OAuth Access Token saved in Preferences</string>

	<!-- Call log related strings -->
	<string name="call_log">Call Log</string>
    <string name="log_label">VooDoo-ed Calls</string>
    <string name="clear_log">Clear Log</string>
    <string name="caller_log_tag">Caller: </string>
    <string name="phone_log_tag">Phone: </string>
    <string name="date_log_tag">Date: </string>
    <string name="hour_log_tag">Hour: </string>
    <string name="confirm_clear_log_msg">Are you sure you want to remove log info?</string>
    <string name="log_empty_msg">No received calls in log</string>
    <string name="press_to_call">(Press to call)</string>
    <string name="log_context_menu_title">Call to:</string>
    <string name="log_call_failed">Call failed</string>
    
   	<!-- Dialog picker -->
    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Reset</string>
    <string name="dialog_picker_title">Choose minutes (0-200)</string>
    <string name="timer_default_text">VooDoo Timer not set</string>
    <string name="timer_set_text">VooDoo will stop at %s</string>
    <string name="timer_set_running">VooDoo will stop at %s</string>
    <string name="timer_service_running">VooDoo is active. Stop first to set timer</string>
</resources>
